# SIST-iONM

./: .env.example  .gitignore  README.md  iniciar_overpriceon.bat  pyproject.toml  requirements.txt
RENDER/: README_RENDER_META.md  render-env.example
app/: main.py
app/shared/: __init__.py
app/static/: chat_realtime.js  manifest.webmanifest  style.css
app/templates/: access_profiles.html  base.html  bi_gerencial.html  chat.html  commissions.html  crud.html  dashboard.html  feed.html  finance.html  hr_employees.html  hr_payment_statement.html  hr_payroll.html  hr_payroll_print.html  hr_rules.html  login.html  opportunities.html  opportunity_card.html  orders.html  orgchart.html  permissions.html  profile.html  purchases.html  seller_reports.html  settings.html  whatsapp_settings.html
docs/: bug-audit.md  development.md  file-map.md  performance.md  versions.md
git/: pyproject.toml
git/docs/: REVISAO_TECNICA_HANDOFF_DEVS_2026-06-30.md  design-system.md  development.md
tests/: conftest.py
tests/characterization/: test_render_smoke.py  test_route_inventory.py  test_template_inventory.py  test_windows_launcher.py
tests/features/: test_access_control_repository.py  test_catalog_import_service.py  test_database_admin_repository.py  test_database_admin_service.py  test_hr_repository.py  test_profile_avatar_service.py  test_recurring_costs.py  test_whatsapp_domain.py  test_whatsapp_infrastructure_security.py  test_whatsapp_service.py
tests/js/: chat-notifications.test.js  profile-avatar-editor.test.js  shell-navigation.test.js
tests/web/: test_hr_module.py  (+15 more)
(+103 files in other folders)
