[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sist-ionm"
version = "2.6.0"
description = "SIST-iONM modular business management system"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic==1.18.4",
  "argon2-cffi==25.1.0",
  "cryptography==49.0.0",
  "fastapi==0.137.1",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "openpyxl==3.1.5",
  "psycopg[binary]==3.3.4",
  "pydantic-settings==2.14.1",
  "python-multipart==0.0.32",
  "reportlab==4.5.1",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==2.1.0",
  "pip-tools==7.5.3",
  "pytest==9.1.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.17",
]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app", "scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E701", "E702", "B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
exclude = ["app/main.py"]
